--- a/index.html
+++ b/index.html
@@ -5155,6 +5155,220 @@ huracán
 hurón 
 hurtado
 hurtar
+iceberg
+iceberg
+idea
+idealismo
+idear
+identificación
+idioma bable
+idioma esperanto
+idioma extranjero
+idiota
+idolo
+iglesia del barrio
+ignorancia
+ignorante
+ignorante
+Iguala 
+igualdad
+iguana delar 
+iguana delar 
+iguana 
+iguana
+iluminación
+iluminado
+iluminar
+imagen
+imaginación
+impaciencia
+impacientar
+impaciente
+impedido
+impedido
+impedimento
+impedir
+impedir la ida
+imperio azteca
+imperio
+imposible
+impotencia sexual
+impotente sexual
+imprenta
+impresión
+impresor
+impresora
+imprimir
+imprudente
+imprudente
+impúdico
+inanición
+incapacidad
+incar 
+incendio
+incensario
+incienso
+inclinado
+inclinarse
+incoloro
+inconforme
+inconstancia
+inconveniente
+incorparado
+incorporación
+incorporar 
+incorregible
+indecisión
+India
+índice
+índice
+indígena americano
+indigencia
+indigencia
+indigestión
+indigestivo
+indio
+indio
+indio
+indiscreto
+indonersio
+Indonesia
+infante
+infantilismo
+infectar 
+infernal
+infidelidad
+infiel
+infierno
+infierno
+infinito
+inflación
+inflado
+inflamación
+inflamado
+inflamar
+información
+informado
+informador 
+inframundo
+ingeniar
+ingeniería
+ingeniero
+ingenio
+ingenioso
+ingerto
+Inglaterra
+ingle
+inglés
+inglés
+ingrediente
+ingreso
+inhumanamente
+iniciación
+inicialmente
+inmaduro
+inmoralidad
+inmortal
+inmortal
+inmortalidad
+inmueble
+inmundicia
+innumerable
+inocencia
+inocente
+inodoro
+inquieto
+inquilino
+insecto
+inservible
+insignia
+insomnio
+insoportable
+inspiración
+inspiración
+inspirado
+inspirar 
+inspirar en Dios
+instancia
+instinto
+instrumento
+inteligente
+intención
+intencional
+intentar
+intento
+interesante
+interior
+internet
+interpretación
+interpretado
+interprete
+intestino
+introducción
+introducido
+introducir 
+inutilidad
+inventado
+inventar 
+inventar
+inventario
+invento
+invernal
+invierno
+invitado
+invitar
+ir a alguna parte 
+ir a otro lado del agua
+ir a saludar
+ir de pie 
+ir de prisa
+ir despacio
+ir y venir
+iracundo
+Irak
+Irán
+iraní
+iraquí
+Irlanda
+irlandés
+irresistible
+isla
+isla
+Isla Salomón
+islam
+islámico
+islandés
+Islandia
+Islas Baleares
+Islas Canarias
+Islas Fiji
+Islas Marshall
+Israel
+israelí
+itacate
+Italia
+italiano
+italiano 
+#¿NOMBRE?
+Itzcoatl 
+Itzmiquilpan 
+ixcateco
+Ixcatlán 
+Ixtapa
+Ixtapaluca 
+Ixtenco 
+Ixtlán 
+ixtle
+Ixtliton 
+Ixtocihuatl 
+Izalco 
+izcalli 
+izote
+izquierda
+Iztacalco 
+Iztacihuatl 
+Iztapalapa 
+Iztapapalocihuatl 
 </div>
 
 <div class="nahuatl">
@@ -10271,6 +10485,220 @@ ehecanamictiliztli
 itzcuintochtli
 nichtequilli
 nichtequi
+acececpan
+cececpan
+yeyecoliztli 2
+yeyecolizcayotl
+yeyeco
+tlacamatlacuilotontli
+axturiatlahtolli
+cemtlaticpatlahtolli
+chontaltlahtolli
+xoxotl
+teotontli
+teocalpolli
+acuayolloliztli
+amatqui
+acuayollo
+yohuallan
+neneuhcayotl
+topilin
+topilli 2
+ozohuitli
+cuauhcuetzpalin
+tlahuiliztli
+tlauhtli 1
+tlahuia
+ixiptli
+ixiptlayotl
+cocollotl
+cocoloa
+cualani
+tlacahualtilli
+tlatzicolli
+tlacahuatiliztli
+tlacahualtia
+tzicoa 2
+aztecatlahtocayotl
+hueytlahtocayotl
+amohuelli
+tepolmiahuiliztli
+tepolmiauhtilli
+tlatepozcuilolli
+tepoztlacuiloliztli
+tepoztlacuilo
+tlamachiotilamacaxitl
+tepoztlacuiloa
+amonahuatilmac
+ayollomatqui
+amoquetzac
+apizmiqui
+matzicuayotl
+actica
+chichinoliztli
+popochcaxitl
+copalli
+malinalli 2
+pachoa 2
+amotlapaltic
+amoninocaqui
+yolocuecuepcayotl
+aontenequini
+tehuantlapouhtli
+nepohualiztli 1
+pohua 2
+atlacaqui
+cototzyotl
+India
+amoxtlahtoltzintli
+icpialitoamoxtli
+ixachitlatl
+icnotlacayotl
+netoliniztli
+xocoyaliztli
+xocotac 1
+indotl
+indiatl
+indotlacatl
+atlehuelitic
+indonesiatl
+Indonesia
+pilatl
+coconeyotl
+mahua
+mictlayotl
+netlacanecoliztli
+netlacaneconi
+ichantletl
+mictlantli
+amotlamini
+tlatzontiliztli
+achipotzahuac
+pozahuatl
+pozauhtic
+pozahua
+tlanonotzaliztli
+tlanonotzatli
+tlanonotzaliani
+Chicnauhmictlan
+chialia
+cuayolomachtiliztli
+cuayolomachtiani
+tlachializtli 1
+tlachialiani
+cuauhzalolli
+Anglitlalpan
+quixilli
+anglitecatl
+anglitl
+teixnaquimiquilli
+calaquiliztli 1
+atlacayotica
+peuhcayotl
+acattopa
+celic
+amiquiliztli
+amilquini
+amiquini
+amilquilizyotl
+tlatquitl
+zotl
+centzon-
+aquentenchihuayotl
+aquentenchihuani
+cuitlacalli
+anequi
+amomotoquilizmac
+yolcatzin
+atleinaccac
+tlahuiztli 3
+ahcochiliztli
+aocuelli
+teyollotiliztli
+teyoliteotiliztli
+teyollotilli
+yolotia
+yoloteotia
+tetototzaliztli
+yuhquiyeliztli
+tlachihualoni
+cuayolo
+yuhcateyolizyotl
+yuhcateyoloni
+yuhcateyolia
+yuhcateyoliztli
+ihuani
+itic
+cemtlalticpamatlatl
+cuapatlahtoliztli
+cuepatlahtolli
+cuepatlahto
+cuitlaxcolli
+tlatzintiliztli
+tlatzintilli
+tzintia
+nenyotl
+tlayocoxtli
+yocoya
+piqui
+tlacentlaliamatl
+tlayohuilli
+tlaceceyotl
+tlaceceyan
+tlacuanotztli
+yolehua
+yahua
+apana
+tlapalotihua
+xopanihua
+iciuhtehua
+popeyoca
+cahuantimani
+yolococolcuic
+Iraquia
+Irania
+iranitecatl
+iraquitecatl
+Irllandia
+irllantecatl
+amoixnahuamiquiliztli
+tlalhuac
+anepantlalpan
+Salomonia
+mahomayotl
+mahomatlacatl
+isllantecatl
+Isllandia
+Tlalhuaque Baleariah
+Tlalhuaque Canariah
+Fixi
+Marxalia
+Ixrrallia
+Ixrralnecatl
+itacatl
+Itlalia
+itlaliatecatl
+itlaliatl
+-tzin
+Itzcoatl
+Itzmiquilpan
+ichcatecatl
+Ichcatlan
+Iztapan
+Iztapallocan
+Ixtenco
+Ixtlan
+ixtli 2
+Ixtliton
+Ixtocihuatl
+Itzalco
+izcalli
+iczotl
+opochtli
+Iztacalco
+Iztacihuatl
+Iztapalapan
+Iztapapalocihuatl
 </div>	 
 		 
 	 </body>
