--- a/index.html
+++ b/index.html
@@ -5368,7 +5368,141 @@ izquierda
 Iztacalco 
 Iztacihuatl 
 Iztapalapa 
-Iztapapalocihuatl 
+Iztapapalocihuatl
+jabalí
+jabalí 
+jabalina
+jabón
+jabonera 
+Jacala 
+jactado
+jactarse
+jade
+jaguares
+jaguëy
+jaguëy
+jalado
+jalapa
+Jalapa
+jalar
+Jalatlaco 
+jalisciense
+Jalisco
+Jalostotítlan 
+Jaloxtoc 
+Jalpan 
+Jaltenco 
+Jaltocan 
+Jaltomate 
+jaltomate
+Jamaica
+jamaiquino
+jamón
+Japón
+japonés
+jarabe
+jardín botánico
+jardín de casa
+jardín de niños 
+jardín
+jardinero
+jarra
+jarrito
+jarro
+jaspe
+jaspeado
+jaula deadera
+jaulaetálica
+jazmín
+jazmín 
+jefe
+jefe
+jeringa
+Jerusalén
+jesuita
+Jesús de Nazareth
+jícama
+jicara
+jícarausical
+jilguero
+jilote
+Jilotepec
+jinete de venados
+jinete
+jiote
+jiotoso
+jirafa
+jitomate
+Jiutepec 
+jodido
+Jojutla 
+jonote 
+Jonuta 
+Jordania
+jordano
+jornal
+jornalero
+joroba
+jorobado
+joven
+joven
+jovencito
+jovenes
+joya
+joya
+joyería
+joyero
+Juan 
+Juan Diego Cuauhtlahtoac 
+jubilado
+jubilado 
+Jubileo
+Juchipila 
+Juchitán 
+judaísmo
+judería
+judicial
+judío
+judo
+juego de azar
+juego de naipes
+juego de pelota azteca
+juego de video
+jueves
+juez
+jugador de naipes
+jugador de pelota 
+jugar
+jugar baraja
+jugar juego de pelota azteca 
+jugo de naranja
+jugo
+jugoso
+juguete
+juguetón
+juguetones
+juicio
+julio
+jumíl
+junco delgado
+junco grueso
+junco
+junio
+junípero
+junta
+juntar
+junto
+junto a
+juntos
+Júpiter
+juramento
+jurar
+jurídico
+jurisdicción
+juventud
+juventudasculina
+juzgado
+juzgado
 </div>
 
 <div class="nahuatl">
@@ -10699,6 +10833,140 @@ Iztacalco
 Iztacihuatl
 Iztapalapan
 Iztapapalocihuatl
+cuapitzotl
+yametl
+neminaliztli
+amolli
+amolcaxitl
+Xacallan
+chachamauhtli
+chachamahua
+xouhquitecpatl
+oocelo
+xalhuey
+atecochtli
+tilantoc
+tolompatl
+Xalapan
+tilana
+Xalatlahco
+xalixtecatl
+Xalixco
+Xaloztotitlan
+Xaloztoc
+Xalpan
+Xaltenco
+Xaltocan
+Xaltomac
+xaltomatl
+Xamaica
+xamaitecatl
+nacatlaoyotl
+Xaponia
+xapotl
+tlachihualnecuhpatli
+xochitlayocan
+xochicalli
+coconexochitlan
+xochitlan
+xochipixqui
+tochtehuilocaxitl
+xaxalohton
+xaloh
+tecpacuicuilli
+cuicuiltic
+cuauhcalli 2
+tepozcalli
+hueylacapixochitl
+lacapixochitl
+tlanahuatiqui
+tencuhtli
+tepozchiuhpatli
+Hierosalima
+Ignacio teopixqui
+Xezutzin
+xicamatl
+xicalli
+tahuitl
+tzocuitl
+xilotl
+Xilotepec
+mazanehnenqui
+cototzyetiuhqui
+xiotl
+xiotini
+xirafatl
+xitomatl
+Xiuhtepec
+chincualli
+Xoxoctlan
+xonotl
+Xonotan 1
+Xordania
+xordaniatl
+tlaxtlahuilli 2
+tlatquihualtiani
+itepotzotiliztli
+tepotzotli
+telpocatl
+telpochtli
+oquichpiltzintli
+telpochtin
+quetzalcozcatl
+cozcatl 1
+teocuitlapitzcalli
+chalchiuhximatqui
+Xuan
+Cuauhtlatoatzin
+tlacnelilli
+yolitlamanemi
+Yectli Xiuhilhuitl
+Xochipilllan
+Xochitan
+yudioyotl
+yudionecentlaliztli
+itechpohuic
+yudiotlacatl
+xudoliztli
+tlamapatoliztli
+amapatoliztli
+ollamaliztli
+videopatolli
+nauhilhuitl
+topileh
+amapatoani
+ollamani
+mahuiltia
+amapatoa
+ollamia
+ayoxocotl
+ayoxahuayotl
+ayoyo
+ahuitzonxoloni
+ahuiltzoncuitlatl
+ahuiltzoncuitlameh
+tetlazontequiztli
+xullio
+xomilli
+xomalli 1
+oztopilli
+tolli
+xunio
+tlaxcatl
+nechicalli
+nechicoa 2
+chico
+-tan
+ceccan
+Tezcatlipoctli
+itechtlahtololiztli
+itechtlahtoa
+tlatzontequililli
+tlatzontequiliztli
+telpocayotl
+techpocatl
+tlatlalizlatocan
+tecpan
 </div>	 
 		 
 	 </body>
