--- a/index.html
+++ b/index.html
@@ -6228,7 +6228,7 @@ mi bandera
 mi bandera
 mi barco
 mi cueva
-mi fríjol
+miríjol
 mi libro
 mi nombre
 mi piedra
@@ -6239,149 +6239,149 @@ mi
 Miahuatlán 
 Michoacán 
 michoacano
-micrófono m
-microscopio m
+micrófono
+microscopio
 Mictlantecihuatl 
 Mictlantecuhtli 
-miedo m
-miedo m
+miedo
+miedo
 miedoso
 miedoso
-miel de arce f
-miel de caña f
-miel f
+miel de arce
+miel de caña
+miel
 mientras 
-miércoles m
-mierda f
-migaja f
-migración f
-migración f
+miércoles
+mierda
+migaja
+migración
+migración
 mil
 mil docientos
-mil m
-mil seiscientos m
+mil
+mil seiscientos
 milagroso
 Milán
-milenio m
-militar m
+milenio
+militar
 millonario
-mimbre m
-mina de oro f
+mimbre
+mina de oro
 minar 
-mineral m
+mineral
 minero
 miope
-mirada arrogante f
+mirada arrogante
 mis amigos
-misa f
+misa
 miserable
-miseria f
-misericordia m
+miseria
+misericordia
 mismo
 misteriosamente
-mitad f
+mitad
 Mitla 
-mitología f
-mitra f
+mitología
+mitra
 Mixcalco 
 Mixcoac 
 Mixcoatl 
 mixe
-mixiote m
+mixiote
 Mixquiahuala 
 mixteco
-mixtecos m
+mixtecos
 Mixtepec 
-mochila f
-moco m
-moco m
+mochila
+moco
+moco
 mocoso
 Moctezuma I 
 Moctezuma II 
 moderado
-modestia f
+modestia
 modesto
-modista m
-mogote m
-moho m
+modista
+mogote
+moho
 mojado
 mojado 
-mojarra f
-molcajete m
-moldad f
-molde m
-mole de olla m
-mole m
+mojarra
+molcajete
+moldad
+molde
+mole de olla
+mole
 moler
 molestar 
-molestía m
+molestía
 molesto
 molido
-molienda f
+molienda
 molinero
-molino m
-mollera f
-momento m
-monaguillo m
+molino
+mollera
+momento
+monaguillo
 monaqués
-monasterio m
-moneda f
-monedero m
-monedero m
+monasterio
+moneda
+monedero
+monedero
 mongol
 Mongolia
-monja f
-monje m
-mono m
-montaña f
+monja
+monje
+mono
+montaña
 montañés
 montar
-montecillo m
+montecillo
 Monterrey
 Monterrey
 Montevideo
-montículo m
-montón de mazorcas m
-monumento m
-mora f
-mora f 
+montículo
+montón deazorcas
+monumento
+mora
+mora 
 morado
-morcilla f
-mordedura f
+morcilla
+mordedura
 morder
 morder 
 moreno
 morir
-morir de frío
+morir derío
 morir de hambre 
 morir en la pobreza
-mortaja f
+mortaja
 mortal 
 mortal 
-mortandad f
-mortero m
-mortero m
-mosaico de turquesas m
-mosca de agua f
-mosca f 
-mosca f 
-mosco m
-mosquete m
-mosquito de río m
-mosquitos m
+mortandad
+mortero
+mortero
+mosaico de turquesas
+mosca de agua
+mosca 
+mosca 
+mosco
+mosquete
+mosquito de río
+mosquitos
 mostrado
 motivo
-motocicleta f
-motor m
+motocicleta
+motor
 mounstro
-mounstro de gila m
+mounstro de gila
 mover
 movible
 movido
-movimiento m
+movimiento
 Mozambique
 mozambiqueño
-mozo m
+mozo
 muchacho tonto
 muchas gracias
 muchas veces
@@ -6390,68 +6390,68 @@ mucho gusto
 mucho
 muchos lugares 
 muchos
-mudanza f
+mudanza
 mudarse 
-muela f
+muela
 muelle
-muerte f
-muerte trágica f
+muerte
+muerte trágica
 muerto
-muerto de guerra m
-mujer casada f
-mujer casada f
-mujer diabólica f
-mujer estéril f
-mujer f
-mujer joven f
-mujeres f
-mujeriego m
-mula f
-muladar m
-multicolor m
-multiplicación f
+muerto de guerra
+mujer casada
+mujer casada
+mujer diabólica
+mujer estéril
+mujer
+mujer joven
+mujeres
+mujeriego
+mula
+muladar
+multicolor
+multiplicación
 multiplicar
-múltiplo m
+múltiplo
 mundano
-mundo de libros m
-mundo m
-mundo m
-mundo marino m
-municipio m
-muñeca de la mano f
-muñeca f
-muñeco m
-muralla f
-muralla f
+mundo de libros
+mundo
+mundo
+mundoarino
+municipio
+muñeca de laano
+muñeca
+muñeco
+muralla
+muralla
 Murcia
 murciano
 murciano 
-murciélago m
-murmullo m
+murciélago
+murmullo
 murmurador
-muro de ladrillo m
-muro de serpientes m
-muro m
-muros m
-musaraña f
-músculo m
-museo m
-musgo m
-música f
-música f
-música sacra f
+muro de ladrillo
+muro de serpientes
+muro
+muros
+musaraña
+músculo
+museo
+musgo
+música
+música
+música sacra
 músico
 músico 
-muslo m
+muslo
 mustio
-mutilación f
+mutilación
 mutilado
 mutilar 
 muy
 muy bien
 muy bueno
 muy caliente
-muy de mañana 
+muy deañana 
 muy sabroso
 muy tarde
 muy
